tests/transpiler/x/zig/sort_stable.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/sort_stable.zig:10:19: error: unable to infer array size
    const items: [_]Item = [_]Item{.{ .n = 1, .v = "a" }, .{ .n = 1, .v = "b" }, .{ .n = 2, .v = "c" }};
                  ^
